From ucommon 1.5.0 to 1.5.1
- some small cleanups for opensolaris builds.
- additional is() and isnull() template operators, template swap.
- automatic rules for default selection with/without ansi C++ library (see
  BUILDS).
- cmodel.sh support for broken libtool versions.

From ucommon 1.4.2 to 1.5.0
- added gnu common c++ based tcp streaming class to ucommon.
- added gnu common c++ based xml sax parser to ucommon with better support for
  parsing embedded xml data structures.
- Daniel Silverstone's persistence engine from gnu common c++ added.

From ucommon 1.4.1 to 1.4.2
- get address entry by family from list.
- MultiMap/multimap multiply pathed lists/associated key objects.
- remove complex automake rules; use new cmodel.sh to reset libtool when
  building pure c mode link for c++ objects for deep embedding without
  libstdc++.
- changes to support QNX target builds.

From ucommon 1.4.0 to 1.4.1
- internalized getaddrinfo substituted on targets without addrinfo support.
- small correction to socket::address::add to pass socket type.
- cygwin support
- fixups for Solaris support

From ucommon 1.3.3 to 1.4.0
- socket::address constructors reorganized
- added mapped (shared memory) to ucommon library
- improved mingw32 support
- support for gcc < 3.0 (gcc 2.96, rhel-2.1 for example)
- socket initialization for msw.

From ucommon 1.3.2 to 1.3.3
- initialization of socket hinting for BSD stack.
- further clarify asserts.
- fixes for NetBSD 4; clock_nanosleep and pthread_setconcurrency support.
- fixes for gcc < 3.4 (such as openbsd...)
- fixes for embedded linux kernel targets

From ucommon 1.3.1 to 1.3.2
- clarified assertions for argument preconditions for correctness.

From ucommon 1.3.0 to 1.3.1
- many testing asserts added to library for function argument preconditions.

From ucommon 1.2.5 to 1.3.0
- dynamic mutex resource locking, with new interface and supporting templates
  to automate operation.  This allows one to create exclusive access regions